--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/HomeAutomex.csproj
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/HomeAutomex.csproj
@@ -196,7 +196,6 @@
     <Compile Include="Controllers\PortaModuloController.cs" />
     <Compile Include="Controllers\ResidenciaController.cs" />
     <Compile Include="Controllers\TipoPortaController.cs" />
-    <Compile Include="Entidade\AcessoCenarioDispositivo.cs" />
     <Compile Include="Entidade\Agendamento.cs" />
     <Compile Include="Entidade\Ambiente.cs" />
     <Compile Include="Entidade\Cenario.cs" />
@@ -218,7 +217,6 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
-    <Compile Include="Models\AcessoCenarioDispositivoModel.cs" />
     <Compile Include="Models\AmbienteModel.cs" />
     <Compile Include="Models\BaseModel.cs" />
     <Compile Include="Models\CenarioModel.cs" />
@@ -361,13 +359,13 @@
     <Content Include="Scripts\html5shiv.js" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Scripts\index.js" />
+    <Content Include="Scripts\bootstrap-switch2.js" />
     <Content Include="Scripts\jquery-1.9.1.js" />
     <Content Include="Scripts\jquery-1.9.1.min.js" />
     <Content Include="Scripts\jquery-latest.js" />
     <Content Include="Scripts\jquery-migrate-1.2.1.js" />
     <Content Include="Scripts\jquery-migrate-1.2.1.min.js" />
     <Content Include="Scripts\jquery-ui-timepicker-addon.js" />
-    <Content Include="Scripts\jquery.mask.min.js" />
     <Content Include="Scripts\jquery.min.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
@@ -545,7 +543,7 @@
     <Content Include="Service References\HomeAutomexService\HomeAutomex.HomeAutomexService.StatusArduinoResponse1.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
-    <Content Include="Service References\HomeAutomexService\HomeAutomex.HomeAutomexService.InserirAcessoCenarioDispositivoResponse.datasource">
+    <Content Include="Service References\HomeAutomexService\HomeAutomex.HomeAutomexService.AssociarCenarioDispositivoResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
     <None Include="Service References\HomeAutomexService\HomeAutomexWS.disco" />
@@ -626,13 +624,13 @@
       <SubType>Code</SubType>
     </Content>
     <Content Include="Views\Cenario\ListarCenario.cshtml" />
-    <Content Include="Views\Cenario\RegistrarCenario.cshtml" />
     <Content Include="Views\Cenario\EditarCenario.cshtml" />
     <Content Include="Views\Agendamento\RegistrarAgendamento.cshtml" />
     <Content Include="Views\Agendamento\ListarAgendamento.cshtml" />
     <Content Include="Views\Agendamento\EditarAgendamento.cshtml" />
     <None Include="Service References\HomeAutomexService\HomeAutomexWS.wsdl" />
     <Content Include="Views\Cenario\AssociarDispositivo.cshtml" />
+    <Content Include="Views\Cenario\RegistrarCenario.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
