--- a/Source/HomeAutomexWS/HomeAutomexWebApplication/Web.config
+++ b/Source/HomeAutomexWS/HomeAutomexWebApplication/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" />    
   </system.web>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -26,7 +26,7 @@
     <!--<add name="HomeAutomexConnection" connectionString="metadata=res://*/teste.HomeAutomexModel.csdl|res://*/teste.HomeAutomexModel.ssdl|res://*/teste.HomeAutomexModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\V11.0;initial catalog=HomeAutomexdb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <!--<add name="ConnectionString" connectionString="data source=(localdb)\V11.0;initial catalog=HomeAutomexdb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"/>-->
     <!--<add name="HomeAutomexConnection" connectionString="Server=(localdb)\v11.0;Integrated Security=true;"/>-->
-    <!--<add name="HomeAutomexConnection" connectionString="data source=localhost\V11.0;initial catalog=HomeAutomexdb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+    <add name="HomeAutomexConnection" connectionString="data source=S1-A2-19;initial catalog=HomeAutomexdb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <!--<add name="HomeAutomexConnection" connectionString="Data Source=(localdb)\V11.0;Initial Catalog=HomeAutomexdb;Integrated Security=True" providerName="System.Data.SqlClient"/>-->
     <!--<add name="HomeAutomexConnection" connectionString="Data Source=FILIPE\FILIPE_SQLSERVER;Initial Catalog=HomeAutomexdb;Persist Security Info=True;User ID=sa;Password=Filipe@2014!" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
