--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/HomeAutomex.csproj
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/HomeAutomex.csproj
@@ -544,7 +544,7 @@
     <Content Include="Service References\HomeAutomexService\HomeAutomex.HomeAutomexService.StatusArduinoResponse1.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
-    <Content Include="Service References\HomeAutomexService\HomeAutomex.HomeAutomexService.AssociarCenarioDispositivoResponse.datasource">
+    <Content Include="Service References\HomeAutomexService\HomeAutomex.HomeAutomexService.AtivarCenarioDispositivoResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
     <None Include="Service References\HomeAutomexService\HomeAutomexWS.disco" />
@@ -632,6 +632,7 @@
     <None Include="Service References\HomeAutomexService\HomeAutomexWS.wsdl" />
     <Content Include="Views\Cenario\AssociarDispositivo.cshtml" />
     <Content Include="Views\Cenario\RegistrarCenario.cshtml" />
+    <Content Include="Views\Cenario\AtivarCenario.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
